<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.softdesign.devintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/user_bg"
                app:aspect_ratio="1.78"/>

            <TextView
                android:id="@+id/user_full_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@string/ff_medium"
                android:paddingBottom="@dimen/spacing_medial_24"
                android:paddingLeft="@dimen/spacing_normal_16"
                android:paddingRight="@dimen/spacing_normal_16"
                android:text="Фамилия Имя"
                android:textColor="@color/white"
                android:textSize="@dimen/font_medium_24"
                android:layout_gravity="bottom"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_large_72"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">

                <TextView
                    android:id="@+id/rating_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Рейтинг"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/code_lines_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Написано строк"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_14"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/projects_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_medium"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_medium_20"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@string/ff_regular"
                    android:text="Проектов"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_normal_14"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/bio_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_normal_16"
            android:layout_marginRight="@dimen/spacing_normal_16"
            android:fontFamily="@string/ff_regular"
            android:maxLines="3"
            android:text="@string/bio_et_text"
            android:textColor="@color/grey_light"
            android:textSize="@dimen/font_normal_14"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:layout_marginTop="@dimen/spacing_normal_16"
            android:background="@color/grey_light"/>

        <Button
            android:id="@+id/more_info_btn"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/spacing_normal_16"
            android:paddingRight="@dimen/spacing_normal_16"
            android:text="Просмотр"
            android:textColor="@color/color_accent"/>

    </LinearLayout>

</android.support.v7.widget.CardView>